@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-23T02:01:04Z",
+  "timestamp" : "2025-04-28T02:05:10Z",
   "count_outdated" : 261,
   "uniques_outdated" : 227,
-  "count" : 263,
-  "uniques" : 229,
+  "count" : 264,
+  "uniques" : 230,
   "clones" : [
     {
       "timestamp": "2025-04-19T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-04-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
